--- a/_config.yml
+++ b/_config.yml
@@ -86,6 +86,8 @@ author:
 publication_category:
   books:
     title: 'Books'
+  preprint:
+    title: 'Preprints'
   manuscripts:
     title: 'Journal Articles'    
   conferences:
