--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ repository               : "wmn-231314/wmn-231314.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "profile.jpg"
   name             : "Mengning Wu"
   pronouns         : # example: "she/her"  
   bio              : "Research Assistant at Carnegie Mellon University"
@@ -88,10 +88,11 @@ publication_category:
     title: 'Books'
   preprint:
     title: 'Preprints'
-  manuscripts:
-    title: 'Journal Articles'    
   conferences:
     title: 'Conference Papers'
+  manuscripts:
+    title: 'Journal Articles'    
+  
 
 # Site Settings
 teaser                   :  # filename of teaser fallback teaser image placed in /images/ for social media previews
